# sentifish

./: .gitignore  .release-please-manifest.json  Dockerfile  README.md  env.sample  railway.toml  release-please-config.json  swarm_analyze.py  swarm_direct.py  swarm_retry.py  swarm_search.py  swarm_search_batch2.py  swarm_topic.py
research/: agent-deployment-patterns.md  agent-memory-patterns.md  agent-sandboxing.md  agent-security-threats.md  agent-testing-strategies.md  agent-ux-patterns.md  aider-harness.md  cline-agent.md  crewai-framework.md  cursor-agent-mode.md  future-of-agents.md  langchain-agents.md  long-running-agents.md  mcp-protocol.md  multimodal-agents.md  opencode-overview.md  reasoning-agents.md  swe-agent-framework.md
search_results/: 00-INDEX.md  01-webarena-dev.md  02-osu-nlp-group-github-io-mind2web.md  03-jykoh-com-vwa.md  04-huggingface-co-gaia-benchmark.md  05-github-com-servicenow-browsergym.md  06-github-com-thudm-agentbench.md  (+59 more)
server/: pyproject.toml  run
server/app/: config.py  custom_executor.py  datasets.py  judge.py  main.py  metric_recommender.py  models.py  narrator.py  providers.py  runner.py  scheduler.py  scorers.py  task_registry.py  tool_registry.py  views.py
server/datasets/: academic-research.json  developer-tools.json  ml-engineer.json  news-and-current-events.json  product-designer.json  sample.json  startup-founder.json
server/tests/: conftest.py  test_custom_executor.py  test_datasets.py  test_models.py  test_providers.py  test_runner.py  test_scheduler.py  test_scorers.py  test_scorers_crossval.py  test_views.py
(+102 files in other folders)
